--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <title>Character Manager</title>
   </head>
+  <header><h1>Character manager</h1></header>
   <body>
- 
+    <main></main>
     <script type="module" src="/src/js/scripts.js"></script>
   </body>
 </html>
