--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <header><h1>Character manager</h1></header>
   <body>
     <main></main>
-    <script type="module" src="/src/js/scripts.js"></script>
+    <script type="module" src="src/js/scripts.js"></script>
   </body>
 </html>
